Add FB CSS styles and update other project files

--- a/popup.html
+++ b/popup.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
           integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
           crossorigin="anonymous">
-    <link rel="stylesheet" href="style_fb.css" type="text/css">
+    <link rel="stylesheet" href="pink.css" type="text/css">
     <style>
         html, body {
             font-family: 'Open Sans', sans-serif;
@@ -18,6 +18,7 @@
             min-height: 180px;
             padding: 0;
             width: 384px;
+            color: #888;
         }
 
         h1 {
@@ -75,7 +76,7 @@
             padding: 10px 22px;
         }
 
-        .flex {
+        .flex-2 > .flex {
             opacity: 1;
             transition: opacity 0.2s ease-in-out;
             width: 120px;
@@ -100,8 +101,10 @@
         </h1>
     </div>
     <div class="modal-content">
-        <h5>Welcome!</h5>
-        <p>Pick your theme</p>
+        <h3>Welcome!</h3>
+        <p>I am hoping to add other themes soon. But until then, enjoy your Facebook in Pink</p>
+        <p>Please report issues on the project's <a href="">Git repo</a>.</p>
+        <!-- <p>Pick your theme</p>
         <ul>
             <li>
                 <a href="">Pink</a>
@@ -109,14 +112,14 @@
             <li>
                 <a href="">Pandas</a>
             </li>
-        </ul>
+        </ul> -->
     </div>
     <div class="modal-icons">
         <div class="flex-container">
-            <div class="flex">Follow me</div>
+            <div class="flex">Follow me:</div>
             <div class="flex">
                 <a href="https://blog.hagarsh.com" target="_blank">
-                    <i class="fab fa-pencil"></i>
+                    <i class="fab fa-wordpress"></i>
                 </a>
             </div>
             <div class="flex">
@@ -141,6 +144,6 @@
             </div>
         </div>
     </div>
-    <script src="style_fb.js"></script>
+    <script src="alert.js"></script>
 </body>
 </html>
