--- a/popup.html
+++ b/popup.html
@@ -102,7 +102,7 @@
     </div>
     <div class="modal-content">
         <h3>Welcome!</h3>
-        <p>I am hoping to add other themes soon. But until then, enjoy your Facebook in Pink</p>
+        <p>I am hoping to add other themes soon. But until then, enjoy Facebook in pink.</p>
         <p>Please report issues on the project's <a href="">Git repo</a>.</p>
         <!-- <p>Pick your theme</p>
         <ul>
