Fix some flexbox stuff and add the repo link to the popup text

--- a/popup.html
+++ b/popup.html
@@ -76,13 +76,12 @@
             padding: 10px 22px;
         }
 
-        .flex-2 > .flex {
+        .flex-icon {
             opacity: 1;
             transition: opacity 0.2s ease-in-out;
-            width: 120px;
         }
 
-        .flex:hover {
+        .flex-icon:hover {
             opacity: 0.4;
         }
 
@@ -102,8 +101,8 @@
     </div>
     <div class="modal-content">
         <h3>Welcome!</h3>
-        <p>I am hoping to add other themes soon. But until then, enjoy Facebook in pink.</p>
-        <p>Please report issues on the project's <a href="">Git repo</a>.</p>
+        <p>Enjoy Facebook in pink. I am hoping to add some new themes in the near future.</p>
+        <p>Please report any issues you might experience on the project's <a href="https://github.com/strayblues/pinkbook/issues" target="_blank">GitHub repo</a>.</p>
         <!-- <p>Pick your theme</p>
         <ul>
             <li>
@@ -117,27 +116,27 @@
     <div class="modal-icons">
         <div class="flex-container">
             <div class="flex">Follow me:</div>
-            <div class="flex">
+            <div class="flex flex-icon">
                 <a href="https://blog.hagarsh.com" target="_blank">
                     <i class="fab fa-wordpress"></i>
                 </a>
             </div>
-            <div class="flex">
+            <div class="flex flex-icon">
                 <a href="https://hagarsh.com" target="_blank">
                     <i class="fa fa-globe"></i>
                 </a>
             </div>
-            <div class="flex">
+            <div class="flex flex-icon">
                 <a href="https://twitter.com/mandala_app" target="_blank">
                     <i class="fab fa-twitter"></i>
                 </a>
             </div>
-            <div class="flex">
+            <div class="flex flex-icon">
                 <a href="https://facebook.com/hagar.shilo" target="_blank">
                     <i class="fab fa-facebook"></i>
                 </a>
             </div>
-            <div class="flex">
+            <div class="flex flex-icon">
                 <a href="https://github.com/strayblues" target="_blank">
                     <i class="fab fa-github"></i>
                 </a>
