--- a/popup.html
+++ b/popup.html
@@ -183,6 +183,6 @@
         </div>
     </div>
 </body>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="jquery/jquery-3.4.1.min.js"></script>
 <script src="bootstrap/bootstrap.min.js"></script>
 </html>
